--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "soenetwork.js",
   "dependencies": {
     "buffer-crc32": ">=0.2.1",
-    "loglevel": "*",
+    "debug": ">=1.0.2",
     "bufferext": "git+ssh://git@github.com:jseidelin/bufferext.git",
     "jenkins-hash": "git+ssh://git@github.com:jseidelin/jenkins-hash.git",
     "dataschema": "git+ssh://git@github.com:jseidelin/dataschema.git"
