update package.json and bump version

--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "soe-network",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Library for emulating SOE network traffic (PlanetSide 2 in particular)",
-  "author": "Jacob Seidelin <jseidelin@nihilogic.dk> (https://github.com/jseidelin)",
+  "author": {
+      "name" : "Jacob Seidelin", 
+      "email" : "jseidelin@nihilogic.dk", 
+      "url" : "http://github.com/jseidelin"
+  },
+  "license": "MIT",
   "main": "soenetwork.js",
   "dependencies": {
     "buffer-crc32": ">=0.2.1",
@@ -11,6 +16,5 @@
     "bufferext": "git+ssh://git@github.com:jseidelin/bufferext.git",
     "jenkins-hash": "git+ssh://git@github.com:jseidelin/jenkins-hash.git",
     "dataschema": "git+ssh://git@github.com:jseidelin/dataschema.git"
-  },
-  "private": true
+  }
 }
